--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 dotenv = "0.15.0"
+reqwest = { version = "0.12.5", features = ["json"] }
+serde = "1.0.204"
+serde_json = "1.0.120"
 serenity = { version = "0.12.2", features = ["client", "gateway", "framework", "standard_framework"] }
 tokio = { version = "1.38.0", features = [ "rt-multi-thread" ] }
