ci: added back continuous integration checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,3 +11,10 @@ jobs:
           profile: minimal
           toolchain: stable
           components: rustfmt, clippy
+      - name: Check build errors
+        run: cargo build
+      - name: Check lints
+        run: cargo clippy --no-deps -- -D warnings
+        if: always()
+      - name: Check format
+        run: cargo fmt
